--- a/thematic_analysis/DataToOntology.ipynb
+++ b/thematic_analysis/DataToOntology.ipynb
@@ -10,13 +10,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in ./thesis_env/lib/python3.10/site-packages (2.2.2)\n",
-      "Requirement already satisfied: numpy>=1.22.4 in ./thesis_env/lib/python3.10/site-packages (from pandas) (1.26.4)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in ./thesis_env/lib/python3.10/site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: pytz>=2020.1 in ./thesis_env/lib/python3.10/site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in ./thesis_env/lib/python3.10/site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: six>=1.5 in ./thesis_env/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Requirement already satisfied: xlrd in ./thesis_env/lib/python3.10/site-packages (2.0.1)\n"
+      "Requirement already satisfied: pandas in /home/roger/vuProjects/thesis/thesis_env/lib/python3.10/site-packages (2.2.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /home/roger/vuProjects/thesis/thesis_env/lib/python3.10/site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/roger/vuProjects/thesis/thesis_env/lib/python3.10/site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in /home/roger/vuProjects/thesis/thesis_env/lib/python3.10/site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: numpy>=1.22.4 in /home/roger/vuProjects/thesis/thesis_env/lib/python3.10/site-packages (from pandas) (1.26.4)\n",
+      "Requirement already satisfied: six>=1.5 in /home/roger/vuProjects/thesis/thesis_env/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
+      "Requirement already satisfied: xlrd in /home/roger/vuProjects/thesis/thesis_env/lib/python3.10/site-packages (2.0.1)\n"
      ]
     }
    ],
@@ -43,9 +43,9 @@
    "outputs": [],
    "source": [
     "# TODO: rename file to data.xls\n",
-    "codes = pd.read_excel('ThematicAnalysis/01/codes.xls', 0)\n",
-    "categories = pd.read_excel('ThematicAnalysis/01/codes.xls', 1)\n",
-    "# urls = pd.read_excel('ThematicAnalysis/01/codes.xls', 2)"
+    "codes = pd.read_excel('data.xls', 0)\n",
+    "categories = pd.read_excel('data.xls', 1)\n",
+    "# urls = pd.read_excel('data.xls', 2)"
    ]
   },
   {
